--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,18 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-  "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "pg": "^8.17.2"
   },
   "devDependencies": {
